# nota-text-query

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix
src/: error.rs  evidence.rs  lib.rs  query.rs  text.rs
tests/: codec.rs  dependency_boundary.rs  query.rs
